@@ -1,3 +1,6 @@
+????-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_02
+* Fix logic when using 'autoclose' on the command line or config file
+
 2011-12-09 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_01
 * Include missing files from release tarballs
 
